@@ -1,3 +1,8 @@
+Mon May 24 08:16:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (rb_f_spawn): use correct command name for the error
+	  message.  [ruby-dev:41395]
+
 Fri May 21 01:06:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* thread.c (subtract_tv): if the rest is zero, should finish waiting
